--- a/html-snippets/navBar/navBar.html
+++ b/html-snippets/navBar/navBar.html
@@ -11,12 +11,12 @@
     <div class="dropdown">
         <button class="dropbtn">Los</button>
         <div class="dropdown-content">
-            <a href="../www/Startseite.html">Startseite</a>
+            <a href="../Startseite/Startseite.html">Startseite</a>
+            <a href="../Design Thinking/DesignThinking.html">Design Thinking</a>
             <a href="../Mathematik/Mathematik.html">Mathematik</a>
             <a href="../Meditation/Meditation.html">Meditation</a>
             <a href="../Sketching/Sketching.html">Sketching</a>
             <a href="../Rätsel/Rätsel.html">Rätsel</a>
-            <a href="../Design Thinking/DesignThinking.html">Design Thinking</a>
         </div>
     </div>
     <div class="dropdown">
