--- a/Mathematik/Mathematik.html
+++ b/Mathematik/Mathematik.html
@@ -2,37 +2,15 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="Mathematik.css"/>
-        <script src="www/navBar.js"></script>
+        <script src="../html-snippets/navBar/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
-
-<!--
-        <div id="navbar">
-            <div class="dropdown">
-                <button class="dropbtn">Los</button>
-                <div class="dropdown-content">
-                    <a href="#3">Mathematik</a>
-                    <a href="#1">Meditation</a>
-                    <a href="#2">Sketching</a>
-                    <a href="#3">Rätsel</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button class="dropbtn">Über</button>
-                <div class="dropdown-content">
-                    <a href="#3">Warum?</a>
-                    <a href="#1">Wie funktioniert's?</a>
-                </div>
-            </div>
-
-        </div>
--->
         
-        <div w3-include-HTML="../html-snippets/navBar.html"></div>
-        <script src="../w3-include-HTML.js"></script>
+        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+        <script src="../html-snippets/w3-include-HTML.js"></script>
 
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
