--- a/Rätsel/Rätsel.html
+++ b/Rätsel/Rätsel.html
@@ -3,16 +3,16 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="Rätsel.css"/>
-        <script src="../www/navBar.js"></script>
+        <script src="../html-snippets/navBar/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-        <div w3-include-HTML="../html-snippets/navBar.html"></div>
-        <script src="../w3-include-HTML.js"></script>
-
+        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+        <script src="../html-snippets/w3-include-HTML.js"></script>
+        
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
             <h1 class="headline">Rätsel</h1>
