--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -3,7 +3,7 @@
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
         <link rel="stylesheet" href="Sketching.css"/>
-        <script src="../www/navBar.js"></script>
+        <script src="../html-snippets/navBar/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
