--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -26,41 +26,36 @@
         </div>
         <!-- Zweite Hälfte -->
         <div id="window2">
-            <!--
-<div id="ThemenauswahlTextBox">
-<p id="Themenauswahl"> Such dir das Thema aus, das dich am meisten interessiert.</p>
-</div>
--->
             <!--            https://www.w3schools.com/howto/howto_js_slideshow.asp-->
-            <div class="slideshow-container">
+            <div class="slideshow-container videopadding">
                 <div class="mySlides fade">
                     <a href="#mathe">
-                        <img src="../Mathematik/Mathe.jpg">
+                        <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
                     </a>
                     <div class="text">
                         Mathematik</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#meditation">
-                        <img src="../Meditation/Meditation.jpg">
+                        <img src="../Meditation/Meditation.jpg" class="responsiveImg">
                     </a>
                     <div class="text">Meditation</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#sketching">
-                        <img src="../Sketching/Sketching.jpeg">
+                        <img src="../Sketching/Sketching.jpeg" class="responsiveImg">
                     </a>
                     <div class="text">Sketching</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#raetsel">
-                        <img src="../Rätsel/Rätsel.jpg">
+                        <img src="../Rätsel/Rätsel.jpg" class="responsiveImg">
                     </a>
                     <div class="text">Rätsel</div>
                 </div>
-                <div class="mySlides fade">
+                <div class="mySlides fade" >
                     <a href="#design thinking">
-                        <img src="../Design Thinking/DesignThinking.jpg">
+                        <img src="../Design Thinking/DesignThinking.jpg" class="responsiveImg">
                     </a>
                     <div class="text">Design Thinking</div>
                 </div>
