--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -2,7 +2,7 @@
 <html>
     <head> <!-- Zusatzinfo für den Browser-->
         <title>MPS</title>
-        <link rel="stylesheet" href="Sketching.css"/>
+        <link rel="stylesheet" href="./Sketching.css"/>
         <script src="../html-snippets/navBar/navBar.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
