--- a/Sketching/example.html
+++ b/Sketching/example.html
@@ -32,8 +32,8 @@
 		context.lineWidth = 4;
 
 		function draw(event) {
-			var x = event.clientX - 10;
-			var y = event.clientY - 10;
+			var x = event.clientX - canvas.offsetLeft;
+			var y = event.clientY - canvas.offsetTop;
 
 			let hex = document.getElementById("hex").innerHTML
 
@@ -87,5 +87,7 @@
 		}, false);
 
 		</script>
+        
+        
     </body>
 </html>
