--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -1,18 +1,17 @@
 <!DOCTYPE>
 <html>
-    <head> <!-- Zusatzinfo für den Browser-->
+    <head>
         <title>MPS</title>
         <link rel="stylesheet" href="./Sketching.css"/>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <!-- Startseite -->
-    <body> <!-- Alles, was man sieht -->
-        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+
+    <body>
+<!--        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>-->
 
 
-        <!-- Erste Hälfte -->
 <!--
         <div id ="imgContainer">
             <h1 class="headline">Sketching</h1>
@@ -22,19 +21,23 @@
 
         <div id="sketching_panel">
             <div><button id="incremntThickness" onclick="increaseThickness()">+</button></div>
-            <div><button id="decrementThickness" onclick="decreaseThickness()">-</button></div>
+            <div><button id="decrementThickness" onclick="decreaseThickness()">–</button></div>
             <div><form>
-<!--                <label for="kb_selected_color">Bitte Farbe wählen: </label>-->
                 <input type="color"id="kb_selected_color">
                 <span id="hex">(#000000)</span>
                 </form></div>
+            <div><button id="drawTool" onclick="setDraw()">Draw</button></div>
+        	<div><button id="lineTool" onclick="setLine()">Line</button></div>
         </div>
-        <canvas id="canvas" width="800px" height="500px" style="border= 1px solid black" onmousemove="draw(event)" onmousedown="enable()" onmouseup="disable()"></canvas>
+        <canvas id="canvas" width="800px" height="500px" style="border= 1px solid black" onmousemove="mouseMove(event)" onmousedown="mouseDown()" onmouseup="mouseUp()" onmouseout="mouseOut()"></canvas>
 
-
-        <script src="../html-snippets/navBar/navBar.js"></script>
-        <script src="../html-snippets/w3-include-HTML.js"></script>
+<!--        <script src="../html-snippets/navBar/navBar.js"></script>-->
+<!--        <script src="../html-snippets/w3-include-HTML.js"></script>-->
+        <script src="./draw.js"></script>
+        <script src="./line.js"></script>
         <script src="./Sketching.js"></script>
-<!--        <script src="test.js"></script>-->
+
+        <h3>TODO!!</h3>
+        <p>Viel Freihand und dann eine Linie malen -> Linie laggt (Canvas neu zeichnen dauert dann zu lange)</p>
     </body>
 </html>
