(sichtbares) TODO in Sketching.html hinzugefügt

--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -38,6 +38,10 @@
         <script src="./Sketching.js"></script>
 
         <h3>TODO!!</h3>
-        <p>Viel Freihand und dann eine Linie malen -> Linie laggt (Canvas neu zeichnen dauert dann zu lange)</p>
+		<ul>
+        	<li>Viel Freihand und dann eine Linie malen -> Linie laggt (Canvas neu zeichnen dauert dann zu lange)</li>
+        	<li>Wenn man die Farbe ändert (oder Stärke) und dann eine Linie malt, wird alles in der Farbe neu gemalt (-> <span style="font-family: monospace;">redrawLines()</span>)</li>
+        </ul>
+        <style>li { margin-bottom: 1em; }</style>
     </body>
 </html>
