Beschreibungen in die Bilder bei der Slideshow. Muss aber noch bissl angepasst werden...

--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -10,18 +10,18 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-<!--        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>-->
-<!--        <script src="../html-snippets/w3-include-HTML.js"></script>-->
-		<iframe id="navbarframe" src="../html-snippets/navBar/navBar.html" frameBorder="0"></iframe>
+        <!--        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>-->
+        <!--        <script src="../html-snippets/w3-include-HTML.js"></script>-->
+        <iframe id="navbarframe" src="../html-snippets/navBar/navBar.html" frameBorder="0"></iframe>
 
-		<!-- TODO: in .css verschieben -->
-		<style>
-			#navbarframe {
-				width: 100%;
-				height: 48px;
-				overflow: hidden;
-			}
-		</style>
+        <!-- TODO: in .css verschieben -->
+        <style>
+            #navbarframe {
+                width: 100%;
+                height: 48px;
+                overflow: hidden;
+            }
+        </style>
 
         <!-- Erste Hälfte -->
         <div id ="imgContainer">
@@ -31,7 +31,7 @@
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
             <h1 class="headline"> Willkommen </h1> 
             <div id="EinfuehrungsTextBox"> <!-- In dieses Textfeld, kommt die Beschreibung der Seite -->
-                <p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
+                <p class="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
             </div>    <!--			<a href="#window2"><button id="button">Start</button></a>-->
         </div>
         <!-- Zweite Hälfte -->
@@ -42,32 +42,36 @@
                     <a href="#mathe">
                         <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
                     </a>
-                    <div class="text">
-                        Mathematik</div>
+                    <div class="imgText">Mathematik
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#meditation">
                         <img src="../Meditation/Meditation.jpg" class="responsiveImg">
                     </a>
-                    <div class="text">Meditation</div>
+                    <div class="imgText">Meditation
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#sketching">
                         <img src="../Sketching/Sketching.jpeg" class="responsiveImg">
                     </a>
-                    <div class="text">Sketching</div>
+                    <div class="imgText">Sketching
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#raetsel">
                         <img src="../Rätsel/Rätsel.jpg" class="responsiveImg">
                     </a>
-                    <div class="text">Rätsel</div>
+                    <div class="imgText">Rätsel
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
                 </div>
                 <div class="mySlides fade" >
                     <a href="#design thinking">
                         <img src="../Design Thinking/DesignThinking.jpg" class="responsiveImg">
-                    </a>
-                    <div class="text">Design Thinking</div>
+                    </a>            
+                    <div class="imgText">Design Thinking 
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
                 </div>
 
                 <!-- Next and previous buttons -->
