--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
-    <body> <!-- Alles, was man sieht -->  
+    <body> <!-- Alles, was man sieht -->
 
         <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
         <script src="../html-snippets/w3-include-HTML.js"></script>
@@ -19,7 +19,7 @@
             <img src ="./brain.jpg" class="center">
         </div>
         <div id="Hintergrund1"> <!-- Der Hintergrund des ersten Fensters auf der Startseite -->
-            <h1 class="headline"> Willkommen </h1> 
+            <h1 class="headline"> Willkommen </h1>
             <div id="EinfuehrungsTextBox"> <!-- In dieses Textfeld, kommt die Beschreibung der Seite -->
                 <p id="Einfuehrungstext"> Diese Seite wurde erstellt, dass Deine Konzentrationsfähigkeit und Kreativität durch vielfältige Aufgaben gesteigert wird. Wir bieten Dir spannende   Übungen aus den Bereichen Yoga, Kunst, Mathematik...</p>
             </div>    <!--			<a href="#window2"><button id="button">Start</button></a>-->
@@ -71,8 +71,8 @@
 
                 <!-- The dots/circles -->
                 <div style="text-align:center">
-                    <span class="dot" onclick="currentSlide(1)"></span> 
-                    <span class="dot" onclick="currentSlide(2)"></span> 
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
                     <span class="dot" onclick="currentSlide(4)"></span>
                     <span class="dot" onclick="currentSlide(5)"></span>
@@ -80,6 +80,7 @@
             </div>
 
             <script src="../html-snippets/slideShow/slideShow.js"></script>
+            <script src="./Buttons/Buttons.js"></script>
 
             <!--            https://codepen.io/terned/pen/bRPmQg-->
 
