--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -24,10 +24,12 @@
             <div><button id="decrementThickness" onclick="decreaseThickness()">–</button></div>
             <div><form>
                 <input type="color"id="kb_selected_color">
-                <span id="hex">(#000000)</span>
+                <span id="hex">#000000</span>
                 </form></div>
             <div><button id="drawTool" onclick="setDraw()">Draw</button></div>
         	<div><button id="lineTool" onclick="setLine()">Line</button></div>
+        	<div><button id="rectTool" onclick="setRect()">Rectangle</button></div>
+        	<div><button id="ellipseTool" onclick="setEllipse()">Ellipse</button></div>
         </div>
         <canvas id="canvas" width="800px" height="500px" style="border= 1px solid black" onmousemove="mouseMove(event)" onmousedown="mouseDown()" onmouseup="mouseUp()" onmouseout="mouseOut()"></canvas>
 
@@ -35,12 +37,14 @@
 <!--        <script src="../html-snippets/w3-include-HTML.js"></script>-->
         <script src="./draw.js"></script>
         <script src="./line.js"></script>
+        <script src="./rect.js"></script>
+        <script src="./ellipse.js"></script>
         <script src="./Sketching.js"></script>
 
         <h3>TODO!!</h3>
 		<ul>
         	<li>Viel Freihand und dann eine Linie malen -> Linie laggt (Canvas neu zeichnen dauert dann zu lange)</li>
-        	<li>Wenn man die Farbe ändert (oder Stärke) und dann eine Linie malt, wird alles in der Farbe neu gemalt (-> <span style="font-family: monospace;">redrawLines()</span>)</li>
+        	<li><b>Bug:</b> Manchmal, wenn man eine Form auswählt und dann eine Farbe, kommt ein Error (siehe Konsole).</li>
         </ul>
         <style>li { margin-bottom: 1em; }</style>
     </body>
