--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -10,9 +10,9 @@
     <!-- Startseite -->
     <body> <!-- Alles, was man sieht -->  
 
-        <!--        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>-->
-        <!--        <script src="../html-snippets/w3-include-HTML.js"></script>-->
-        <iframe id="navbarframe" src="../html-snippets/navBar/navBar.html" frameBorder="0"></iframe>
+        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
+        <script src="../html-snippets/w3-include-HTML.js"></script>
+<!--        <iframe id="navbarframe" src="../html-snippets/navBar/navBar.html" frameBorder="0"></iframe>-->
 
         <!-- TODO: in .css verschieben -->
         <style>
