--- a/Mathematik/Mathematik.html
+++ b/Mathematik/Mathematik.html
@@ -7,14 +7,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <!-- Startseite -->
-    <body> <!-- Alles, was man sieht -->  
+    <body onload="init()"> <!-- Alles, was man sieht -->  
         
-        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>
-        <script src="../html-snippets/w3-include-HTML.js"></script>
+<!--        <div w3-include-HTML="../html-snippets/navBar/navBar.html"></div>-->
+<!--        <script src="../html-snippets/w3-include-HTML.js"></script>-->
 
-        <!-- Erste Hälfte -->
-        <div id ="imgContainer">
-            <h1 class="headline">Mathematik</h1>
-            <img src ="Mathe.jpg" class="center">
-        </div>
+        <script src="Mathematik.js"></script>
+
+		<span id="left_operand">a</span>
+		<span id="operator">+</span>
+		<span id="right_operand">b</span>
+		<span>=</span>
+		<input id="result_input"></input>
+		<button id="submit_button" onclick="submit()">Submit</button>
+		<button id="solution_button" onclick="showSolution()">Solution</button>
+		<span id="feedback"></span>
+
     </body>
