--- a/Startseite/Startseite.html
+++ b/Startseite/Startseite.html
@@ -21,6 +21,8 @@
                 height: 48px;
                 overflow: hidden;
             }
+
+
         </style>
 
         <!-- Erste Hälfte -->
@@ -42,38 +44,34 @@
                     <a href="#mathe">
                         <img src="../Mathematik/Mathe.jpg" class="responsiveImg">
                     </a>
-                    <div class="imgText">Mathematik
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+                    <div class="imgText">
+                        Mathematik & Rätsel:
+                        Hier findest du Aufgaben im Bereich Mathematik und Rätsel. Wir haben Kopfrechenaufgaben, Sudokus, und viele weitere interessante Aufgaben, um deine Konzentrationsfähigkeit zu steigern. 
+                    </div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#meditation">
                         <img src="../Meditation/Meditation.jpg" class="responsiveImg">
                     </a>
-                    <div class="imgText">Meditation
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+                    <div class="imgText">Meditation &  Yoga:
+                        Schalte ab und mache deinen Kopf frei. Gönn dir eine Pause, danach bist du viel effektiver! Schaue vorbei um mehr zu erfahren.
+                    </div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#sketching">
                         <img src="../Sketching/Sketching.jpeg" class="responsiveImg">
                     </a>
-                    <div class="imgText">Sketching
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+                    <div class="imgText">Sketching:
+                    Hier kannst du deinen Gedanken freien lauf lassen. Entweder du skizzierst etwas, das dir selbst gefällt oder wenn du keine eigenen Ideen hast, haben wir Themenfelder für dich vorbereitet. Erstelle eine Mindmap, gerne auch im Team!</div>
                 </div>
                 <div class="mySlides fade">
                     <a href="#raetsel">
                         <img src="../Rätsel/Rätsel.jpg" class="responsiveImg">
                     </a>
                     <div class="imgText">Rätsel
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+                    Lorem ipsum dolor sit amet, </div>
                 </div>
-                <div class="mySlides fade" >
-                    <a href="#design thinking">
-                        <img src="../Design Thinking/DesignThinking.jpg" class="responsiveImg">
-                    </a>            
-                    <div class="imgText">Design Thinking 
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
-                </div>
-
+                
                 <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -84,13 +82,12 @@
                     <span class="dot" onclick="currentSlide(2)"></span> 
                     <span class="dot" onclick="currentSlide(3)"></span>
                     <span class="dot" onclick="currentSlide(4)"></span>
-                    <span class="dot" onclick="currentSlide(5)"></span>
                 </div>
             </div>
 
             <script src="../html-snippets/slideShow/slideShow.js"></script>
 
-            <!--            https://codepen.io/terned/pen/bRPmQg-->
+            <!--   https://codepen.io/terned/pen/bRPmQg-->
 
         </div>
     </body>
