--- a/Sketching/Sketching.html
+++ b/Sketching/Sketching.html
@@ -19,10 +19,11 @@
             <img src ="Sketching.jpeg" class="center">
         </div>
 -->
+<script src="themen.js"></script>
 
-        <button button id="AufgabenButton" onclick="plusAufgaben(1)">Klicke für Beispiel-Themen</button>
+        <button button id="AufgabenButton" onclick="showAufgaben()">Klicke für Beispiel-Themen</button>
 
-        <div class="myAufgaben fade">
+    <!-- <div class="myAufgaben fade">
             <div class="AufgabenText">
         Zitat: Kein Mensch ist so beschäftigt, dass er nicht die Zeit hat, überall zu erzählen, wie beschäftigt er ist. </div>
         </div>
@@ -107,21 +108,31 @@
         George Floyd
             </div>
         </div>
+    -->
         
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusAufgaben(-1)">&#10094;</a>
-        <a class="next" onclick="plusAufgaben(1)">&#10095;</a>
-
         <!-- The dots/circles -->
+        <!--
         <div style="text-align:center">
+            <span class="dot" onclick="currentAufgaben(0)"></span>
             <span class="dot" onclick="currentAufgaben(1)"></span> 
             <span class="dot" onclick="currentAufgaben(2)"></span> 
             <span class="dot" onclick="currentAufgaben(3)"></span>
             <span class="dot" onclick="currentAufgaben(4)"></span>
+            <span class="dot" onclick="currentAufgaben(5)"></span> 
+            <span class="dot" onclick="currentAufgaben(6)"></span> 
+            <span class="dot" onclick="currentAufgaben(7)"></span>
+            <span class="dot" onclick="currentAufgaben(8)"></span>
+            <span class="dot" onclick="currentAufgaben(9)"></span> 
+            <span class="dot" onclick="currentAufgaben(10)"></span> 
+            <span class="dot" onclick="currentAufgaben(11)"></span>
+            <span class="dot" onclick="currentAufgaben(12)"></span>
+            <span class="dot" onclick="currentAufgaben(13)"></span> 
+            <span class="dot" onclick="currentAufgaben(14)"></span> 
+            <span class="dot" onclick="currentAufgaben(15)"></span>
         </div>
     </div>
-
-    <script src="themen.js"></script>
+-->
+    
 
         <div id="sketching_panel">
             <div><button id="incremntThickness" onclick="increaseThickness()">+</button></div>
